--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "outDir": "./target",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
@@ -10,6 +10,8 @@
     "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": [
+      "jquery",
+      "materialize-css",
       "node_modules/@types"
     ],
     "lib": [
