--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@mdi/font": "^2.4.85",
+    "@swimlane/ngx-datatable": "^13.0.1",
     "core-js": "^2.5.4",
     "ngx-materialize": "^6.0.1",
     "rxjs": "^6.0.0",
