--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdi/font": "^2.4.85",
     "@swimlane/ngx-datatable": "^13.0.1",
     "core-js": "^2.5.4",
+    "jquery-mask-plugin": "^1.14.15",
     "ngx-materialize": "^6.0.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.1",
