--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/materialize-css/dist/js/materialize.min.js",
-              "node_modules/jquery-mask-plugin/jquery.mask.js"
+              "node_modules/materialize-css/dist/js/materialize.min.js"
             ]
           },
           "configurations": {
