--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "@mdi/font": "^2.4.85",
     "@swimlane/ngx-datatable": "^13.0.1",
+    "angular2-text-mask": "^9.0.0",
     "core-js": "^2.5.4",
     "ngx-materialize": "^6.0.1",
     "rxjs": "^6.0.0",
